@@ -19,7 +19,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Tag(name = "User", description = "사용자 관련 API")
 @RestController
@@ -32,7 +31,7 @@ public class AdminUserController {
         this.userService = userService;
     }
 
-    // todo :  request param -> json request
+    // request param -> json request
     @Operation(summary = "✅ [관리자] 특정 회원 정보 조회",
             description = "username, password, isAdmin, name, serial 반환",
             security = {@SecurityRequirement(name = "JWT")},
@@ -75,7 +74,7 @@ public class AdminUserController {
     public ResponseEntity<ApiResponseDto<ApiResponseListDto<UserInfoResponseDto>>> getAllUsers() {
         List<UserInfoResponseDto> users = userService.findAllUsers()
                 .stream().map(userService::dtoFrom)
-                .collect(Collectors.toList());
+                .toList();
 
         ApiResponseListDto<UserInfoResponseDto> wrapped = new ApiResponseListDto<>(users);
 
@@ -85,7 +84,7 @@ public class AdminUserController {
         return new ResponseEntity<>(response,HttpStatus.OK);
     }
 
-    // todo :  request param -> json request
+    // request param -> json request
     @Operation(summary = "✅ [관리자] 특정 회원 삭제",
             description = "해당 user id의 정보 삭제 API",
             security = {@SecurityRequirement(name = "JWT")}
